--- a/PVLI/package.json
+++ b/PVLI/package.json
@@ -1,24 +1,22 @@
 {
   "version": "0.0.0",
   "name": "awesome-game",
-  "version": "0.0.0",
-  "author": "",
-  "license": "CC-BY-NC-SA-4.0",
-  
-  "repository": "gituser/awesome-game",
   "author": "gituser",
-  
+  "license": "CC-BY-NC-SA-4.0",
+  "repository": "gituser/awesome-game",
   "dependencies": {
-    "browserify": "*",
     "browser-sync": "*",
+    "browserify": "*",
     "del": "*",
     "gulp": "*",
     "gulp-connect": "*",
-    "gulp-gh-pages": "*", 
+    "gulp-gh-pages": "*",
     "gulp-util": "*",
     "merge-stream": "*",
     "phaser": "*",
+    "uniq": "^1.0.1",
     "vinyl-source-stream": "*",
-    "watchify": "*"
+    "watchify": "*",
+    "yo": "^2.0.0"
   }
 }
